--- a/.azure-pipelines/templates/osx/build-and-unit-test.yml
+++ b/.azure-pipelines/templates/osx/build-and-unit-test.yml
@@ -12,8 +12,8 @@ steps:
   - task: InstallAppleCertificate@2
     displayName: 'Install Apple certificate'
     inputs:	
-      certSecureFile: 'MacDevCertMsftMattche.p12'
-      certPwd: '$(AppleCertificatePassword)'
+      certSecureFile: '$(Apple.Certificate.FileName)'
+      certPwd: '$(Apple.Certificate.Password)'
 
   - script: Scripts/Mac/BuildScalarForMac.sh $(configuration) $(majorAndMinorVersion).$(revision)
     displayName: Build Scalar ($(configuration))
