Fix Windows signing
Ensure MicroBuild signing runs correctly by using classic MSBuild, and
split the Windows installer/sign build step into phases to facilitate
the jumping between .NET Core MSBuild and Framework MSBuild.

--- a/.azure-pipelines/release.yml
+++ b/.azure-pipelines/release.yml
@@ -24,7 +24,7 @@ jobs:
       - powershell: Scripts/CI/Set-Version.ps1 -SourceBranchCounter $(branchCounter)
         displayName: "Compute product version"
       - template: templates/win/build-and-unit-test.yml
-      - template: templates/win/pack.yml
+      - template: templates/win/pack.signed.yml
 
   - job: osx_build_step1
     displayName: macOS Build and Unit Test
