--- a/Scalar.Signing/Scalar.SignInstaller.Windows.csproj
+++ b/Scalar.Signing/Scalar.SignInstaller.Windows.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <FilesToSign Include="$(OutDir)\Scalar*.exe;" />
+    <FilesToSign Include="$(OutDir)\*.exe;" />
   </ItemGroup>
 
 </Project>
