[PR Build] Update Git to include 'git add' fixes
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -36,7 +36,7 @@
 
     <!-- Version information -->
     <ScalarVersion>0.2.173.2</ScalarVersion>
-    <GitPackageVersion>2.20191217.3</GitPackageVersion>
+    <GitPackageVersion>2.20191226.3-pr</GitPackageVersion>
     <WatchmanPackageUrl>https://github.com/facebook/watchman/suites/307436006/artifacts/304557</WatchmanPackageUrl>
     <GcmCoreOSXPackageUrl>https://github.com/microsoft/Git-Credential-Manager-Core/releases/download/v2.0.79-beta/gcmcore-osx-2.0.79.64449.pkg</GcmCoreOSXPackageUrl>
 
