Generate and publish NuGet packages in release builds
Generate and publish a NuGet package containing the distribution output
in release builds for all platforms, to an internal Azure Artifacts
feed.

--- a/.azure-pipelines/release.yml
+++ b/.azure-pipelines/release.yml
@@ -14,6 +14,8 @@ variables:
     value: windows-2019
   - name: osxImage
     value: macOS-10.14
+  - name: 1ESFeedCredentials
+    value: '1ESSharedAssets GVFS Feed [Publish]'
 
 jobs:
   - job: win_build
