--- a/.azure-pipelines/templates/osx/pack.signed/step5-dist.yml
+++ b/.azure-pipelines/templates/osx/pack.signed/step5-dist.yml
@@ -42,9 +42,15 @@ steps:
       basePath: $(Build.ArtifactStagingDirectory)/dist
 
   - task: NuGetCommand@2
-    displayName: Publish distribution package (internal)
+    displayName: Push distribution package (internal)
     inputs:
       command: push
       packagesToPush: $(Build.ArtifactStagingDirectory)/nupkg/*.nupkg
       nuGetFeedType: external
       publishFeedCredentials: $(1ESFeedCredentials)
+
+  - task: PublishPipelineArtifact@1
+    displayName: Publish distribution package (internal)
+    inputs:
+      targetPath: $(Build.ArtifactStagingDirectory)/nupkg
+      artifactName: Package_macOS_$(configuration)
