--- a/Scalar.Common/Scalar.Common.csproj
+++ b/Scalar.Common/Scalar.Common.csproj
@@ -8,11 +8,20 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="NuGet.CommandLine" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers" />
     <PackageReference Include="NuGet.Commands" />
     <PackageReference Include="Microsoft.PowerShell.SDK" />
     <PackageReference Include="Microsoft.Windows.Compatibility" />
     <PackageReference Include="GitForWindows.GVFS.Installer" PrivateAssets="all" />
     <PackageReference Include="GitForMac.GVFS.Installer" PrivateAssets="all" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="$(PkgNuGet_CommandLine)\tools\nuget.exe"
+          CopyToOutputDirectory="PreserveNewest"
+          Visible="false"
+          LinkBase="$(ExternalBinariesDirectoryName)"
+          Condition="$(RuntimeIdentifier.StartsWith('win'))" />
   </ItemGroup>
 
   <Target Name="_GenerateConstantsFile" BeforeTargets="BeforeBuild">
@@ -28,6 +37,7 @@
 
     <!-- Generate Scalar constants file with the minimum Git version -->
     <GenerateScalarConstants MinimumGitVersion="$(MinimumGitVersion)"
+                             ExternalBinariesDirectoryName="$(ExternalBinariesDirectoryName)"
                              OutputFile="$(IntermediateOutputPath)ScalarConstants.g.cs" />
 
     <!-- Add the generated file to the list of file writes for MSBuild to keep track of for clean-up -->
