--- a/Scalar.Service.UI/Scalar.Service.UI.csproj
+++ b/Scalar.Service.UI/Scalar.Service.UI.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <AssemblyName>scalar.service.ui</AssemblyName>
     <RootNamespace>Scalar.Service.UI</RootNamespace>
   </PropertyGroup>
