--- a/.azure-pipelines/templates/osx/pack.signed/step5-dist.yml
+++ b/.azure-pipelines/templates/osx/pack.signed/step5-dist.yml
@@ -5,9 +5,9 @@ steps:
       artifact: _osx_installer_signed
       path: $(Build.ArtifactStagingDirectory)/package
 
-  - script: Scalar.Signing/notarize-pkg.sh -id "$(Apple.Notarization.AppleId)" -p "$(Apple.Notarization.Password)" -pkg "$(Build.ArtifactStagingDirectory)"/package/*.pkg -b "com.microsoft.scalar.pkg"
-    displayName: Notarize installer (and containing bundles & binaries)
-    condition: and(succeeded(), eq(variables['SignType'], 'real'))
+  #- script: Scalar.Signing/notarize-pkg.sh -id "$(Apple.Notarization.AppleId)" -p "$(Apple.Notarization.Password)" -pkg "$(Build.ArtifactStagingDirectory)"/package/*.pkg -b "com.microsoft.scalar.pkg"
+  #  displayName: Notarize installer (and containing bundles & binaries)
+  #  condition: and(succeeded(), eq(variables['SignType'], 'real'))
 
   - task: DownloadPipelineArtifact@2
     displayName: Download Git for Mac installer package
