Dependencies: add GitForLinux installer package
We also add the Linux GVFS Git package to the list of package
references in the Scalar.Common.csproj file.

--- a/Scalar.Common/Scalar.Common.csproj
+++ b/Scalar.Common/Scalar.Common.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Windows.Compatibility" />
     <PackageReference Include="GitForWindows.GVFS.Installer" PrivateAssets="all" />
     <PackageReference Include="GitForMac.GVFS.Installer" PrivateAssets="all" />
+    <PackageReference Include="GitForLinux.GVFS.Installer" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
