--- a/Dependencies.props
+++ b/Dependencies.props
@@ -10,6 +10,7 @@
     <PackageReference Update="NuGet.Commands"                  Version="5.4.0"  />
     <PackageReference Update="GitForWindows.GVFS.Installer"    Version="$(GitPackageVersion)" />
     <PackageReference Update="GitForMac.GVFS.Installer"        Version="$(GitPackageVersion)" />
+    <PackageReference Update="GitForLinux.GVFS.Installer"      Version="$(GitPackageVersion)" />
 
     <!-- Build-only dependencies -->
     <PackageReference Update="MicroBuild.Core"                 Version="0.2.0" PrivateAssets="all" />
