*.{cs,csproj,props,targets,sln}: remove BOM marks
Remove UTF-8 BOM marks from code and project files, following
on from commit 6a8a91fb832cef438efa9378d576e7352566c28d.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,4 +1,4 @@
-﻿<Project>
+<Project>
   <!-- Define common properties that rely on SDK/props-defined properties -->
   <PropertyGroup>
     <Version>$(ScalarVersion)</Version>
