continuous-integration: add short artifact retention on Trace2 logs
Signed-off-by: Jeff Hostetler <jeffhost@microsoft.com>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -167,3 +167,4 @@ jobs:
       with:
         name: ${{ env.TRACE2_BASENAME }}.zip
         path: ${{ env.TRACE2_BASENAME }}.zip
+        retention-days: 7
