Actions: update installers on releases/*
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/.github/workflows/build-installers.yml
+++ b/.github/workflows/build-installers.yml
@@ -2,9 +2,9 @@ name: Build Installers
 
 on:
   push:
-    branches: [ main, release/* ]
+    branches: [ main, releases/* ]
   pull_request:
-    branches: [ main, release/* ]
+    branches: [ main, releases/* ]
 
 jobs:
   linux:
