Use branch name to compute release version number
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/Scalar.Packaging.Linux/Scalar.Packaging.Linux.csproj
+++ b/Scalar.Packaging.Linux/Scalar.Packaging.Linux.csproj
@@ -20,6 +20,7 @@
              Targets="Publish"
              Properties="
              Configuration=$(Configuration);
+             ScalarVersion=$(ScalarVersion);
              RuntimeIdentifier=$(RuntimeIdentifier);"
              BuildInParallel="true" />
 
