--- a/.github/workflows/build-installers.yml
+++ b/.github/workflows/build-installers.yml
@@ -25,15 +25,15 @@ jobs:
     - name: Compute Scalar Version
       run: |
         BRANCH=$(git branch --show-current)
-        if [ "${BRANCH:0:9" = "releases/" ]; then
-          VERSION="${BRANCH:9}".0
+        if [ "${BRANCH:0:9}" = "releases/" ]; then
+          SCALARVERSION="${BRANCH:9}".0
         else
-          VERSION=0.3.132.0
+          SCALARVERSION=0.3.132.0
         fi
-        export VERSION
+        export SCALARVERSION
 
     - name: Build Linux packages
-      run: dotnet publish -c Release -p:ScalarVersion=$VERSION 'Scalar.Packaging.Linux/Scalar.Packaging.Linux.csproj'
+      run: dotnet publish -c Release -p:ScalarVersion=$SCALARVERSION 'Scalar.Packaging.Linux/Scalar.Packaging.Linux.csproj'
 
       # Because the actions/upload-artifact action does not allow you to specify
       # relative file paths we must first use a shell script to copy the
