Actions: update installer build
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,9 +2,9 @@ name: Scalar
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, releases/* ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, releases/* ]
 
 jobs:
   validate_scalar:
