--- a/.github/workflows/build-installers.yml
+++ b/.github/workflows/build-installers.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: dotnet restore --force
 
-    - name: Compute Scalar Version
+    - name: Build Linux packages
       run: |
         BRANCH=$(git branch --show-current)
         if [ "${BRANCH:0:9}" = "releases/" ]; then
@@ -30,10 +30,8 @@ jobs:
         else
           SCALARVERSION=0.3.132.0
         fi
-        export SCALARVERSION
-
-    - name: Build Linux packages
-      run: dotnet publish -c Release -p:ScalarVersion=$SCALARVERSION 'Scalar.Packaging.Linux/Scalar.Packaging.Linux.csproj'
+        echo $SCALARVERSION
+        dotnet publish -c Release -p:ScalarVersion=$SCALARVERSION 'Scalar.Packaging.Linux/Scalar.Packaging.Linux.csproj'
 
       # Because the actions/upload-artifact action does not allow you to specify
       # relative file paths we must first use a shell script to copy the
