macOS: drop Mac service
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/Scalar.Signing/Scalar.SignFiles.Mac.csproj
+++ b/Scalar.Signing/Scalar.SignFiles.Mac.csproj
@@ -11,12 +11,9 @@
   <ItemGroup>
     <FilesToSign Include="
       $(OutDir)\pe\scalar.dll;
-      $(OutDir)\pe\scalar.common.dll;
-      $(OutDir)\pe\scalar.service.dll;" />
+      $(OutDir)\pe\scalar.common.dll;" />
     <MacFilesToSign Include="
-      $(OutDir)\macho\scalar;
-      $(OutDir)\macho\scalar.service;
-      $(OutDir)\macho\Scalar.app;" />
+      $(OutDir)\macho\scalar;" />
   </ItemGroup>
 
 </Project>
