macOS: Fix local build script
This gets around the multiple sources problem, but has the issue
that every build will download the installers fresh.

Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/Scalar.Installer.Mac/Scalar.Installer.Mac.csproj
+++ b/Scalar.Installer.Mac/Scalar.Installer.Mac.csproj
@@ -35,11 +35,10 @@
     <ItemGroup>
       <ScriptTemplate Include="$(MSBuildThisFileDirectory)InstallScalar.template.sh" />
       <ScalarPackage  Include="$(PackageOutputPath)*.pkg" />
-      <GitPackage     Include="$(PkgGitForMac_GVFS_Installer)\tools\*.pkg" />
     </ItemGroup>
 
     <!-- Build the distribution script -->
-    <Exec Command="$(MSBuildProjectDirectory)/dist.sh '@(ScalarPackage)' '@(GitPackage)' '$(GcmCoreOSXPackageUrl)' '@(ScriptTemplate)' '$(DistributionOutputPath)'"/>
+    <Exec Command="$(MSBuildProjectDirectory)/dist.sh '@(ScalarPackage)' '$(GitPackageVersion)' '$(GcmCoreOSXPackageUrl)' '@(ScriptTemplate)' '$(DistributionOutputPath)'"/>
   </Target>
 
   <Target Name="_Clean" AfterTargets="Clean">
